results/benchmarks/v0.6.5/report.md
# fcoreutils v0.6.5 — Detailed Results

Generated: 2026-02-24 00:09:35 UTC

## Compatibility

| Platform | Tests | Passed | Failed | Pass Rate |
|----------|-------|--------|--------|-----------|
| Linux_aarch64 | 413 | 410 | 3 | 99.3% |
| Linux_x86_64 | 413 | 410 | 3 | 99.3% |

**Overall: 820/826 (99.3%)**

## Performance

### Linux_aarch64

| Tool | Test | GNU (mean) | fcoreutils (mean) | uutils (mean) | f* vs GNU | f* vs uutils |
|------|------|-----------|-------------------|---------------|----------:|-------------:|
| b2sum | single 100KB text | 0.0009s | 0.0011s | 0.0012s | **0.8x** | **1.1x** |
| b2sum | single 1MB text | 0.0021s | 0.0021s | 0.0023s | **1.0x** | **1.1x** |
| b2sum | single 10MB text | 0.0142s | 0.0136s | 0.0138s | **1.0x** | **1.0x** |
| b2sum | single 10MB binary | 0.0150s | 0.0144s | 0.0145s | **1.0x** | **1.0x** |
| b2sum | single 100MB text | 0.1350s | 0.1145s | 0.1282s | **1.2x** | **1.1x** |
| b2sum | -l 256 10MB | 0.0141s | 0.0138s | 0.0138s | **1.0x** | **1.0x** |
| b2sum | -l 128 10MB | 0.0143s | 0.0137s | 0.0138s | **1.0x** | **1.0x** |
| b2sum | 100 files | 0.0016s | 0.0016s | 0.0017s | **1.0x** | **1.0x** |
| base64 | encode 100KB text | 0.0009s | 0.0011s | 0.0010s | **0.8x** | **0.9x** |
| base64 | encode 1MB text | 0.0016s | 0.0017s | 0.0016s | **1.0x** | **1.0x** |
| base64 | encode 10MB text | 0.0098s | 0.0036s | 0.0071s | **2.7x** | **1.9x** |
| base64 | encode 10MB binary | 0.0104s | 0.0036s | 0.0078s | **2.9x** | **2.2x** |
| base64 | decode 1MB | 0.0038s | 0.0018s | 0.0036s | **2.0x** | **1.9x** |
| base64 | decode 10MB | 0.0309s | 0.0040s | 0.0269s | **7.7x** | **6.7x** |
| base64 | encode -w 76 10MB | 0.0099s | 0.0034s | 0.0072s | **2.9x** | **2.1x** |
| base64 | encode -w 0 (no wrap) 10MB | 0.0079s | 0.0033s | 0.0075s | **2.4x** | **2.3x** |
| cut | -b1-100 10MB CSV | 0.0188s | 0.0030s | 0.0065s | **6.3x** | **2.2x** |
| cut | -c1-100 10MB CSV | 0.0188s | 0.0030s | 0.0064s | **6.2x** | **2.1x** |
| cut | -d, -f1 10MB CSV | 0.0191s | 0.0046s | 0.0074s | **4.1x** | **1.6x** |
| cut | -d, -f1,3,5 10MB CSV | 0.0215s | 0.0050s | 0.0166s | **4.3x** | **3.3x** |
| cut | -d, -f2-4 10MB CSV | 0.0234s | 0.0050s | 0.0130s | **4.7x** | **2.6x** |
| cut | --complement -d, -f1 10MB CSV | 0.0266s | 0.0044s | 0.0163s | **6.1x** | **3.7x** |
| cut | -d, -f1 100KB text | 0.0008s | 0.0012s | 0.0010s | **0.7x** | **0.8x** |
| cut | -d, -f1 1MB text | 0.0035s | 0.0027s | 0.0018s | **1.3x** | **0.7x** |
| cut | -d: -f1 colon file | 0.0007s | 0.0013s | 0.0010s | **0.6x** | **0.8x** |
| md5sum | single 100KB text | 0.0013s | 0.0021s | 0.0012s | **0.6x** | **0.6x** |
| md5sum | single 1MB text | 0.0031s | 0.0036s | 0.0028s | **0.9x** | **0.8x** |
| md5sum | single 10MB text | 0.0212s | 0.0176s | 0.0177s | **1.2x** | **1.0x** |
| md5sum | single 10MB binary | 0.0224s | 0.0186s | 0.0187s | **1.2x** | **1.0x** |
| md5sum | single 100MB text | 0.2004s | 0.1439s | 0.1658s | **1.4x** | **1.2x** |
| md5sum | 10 files | 0.0011s | 0.0018s | 0.0011s | **0.6x** | **0.6x** |
| md5sum | 100 files | 0.0018s | 0.0023s | 0.0016s | **0.8x** | **0.7x** |
| sha256sum | single 100KB text | 0.0012s | 0.0025s | 0.0014s | **0.5x** | **0.6x** |
| sha256sum | single 1MB text | 0.0020s | 0.0030s | 0.0039s | **0.7x** | **1.3x** |
| sha256sum | single 10MB text | 0.0079s | 0.0092s | 0.0276s | **0.9x** | **3.0x** |
| sha256sum | single 10MB binary | 0.0082s | 0.0094s | 0.0289s | **0.9x** | **3.1x** |
| sha256sum | single 100MB text | 0.0688s | 0.0673s | 0.2623s | **1.0x** | **3.9x** |
| sha256sum | 10 files | 0.0011s | 0.0018s | 0.0012s | **0.6x** | **0.6x** |
| sha256sum | 100 files | 0.0018s | 0.0021s | 0.0018s | **0.8x** | **0.8x** |
| sort | lexicographic 1MB | 0.0077s | 0.0033s | 0.0043s | **2.3x** | **1.3x** |
| sort | lexicographic 10MB random | 0.0520s | 0.0097s | 0.0311s | **5.3x** | **3.2x** |
| sort | already sorted 10MB | 0.0253s | 0.0035s | 0.0139s | **7.2x** | **4.0x** |
| sort | reverse sorted 10MB | 0.0250s | 0.0049s | 0.0139s | **5.1x** | **2.8x** |
| sort | -n numeric 10MB | 0.0695s | 0.0038s | 0.0637s | **18.2x** | **16.7x** |
| sort | -r reverse 10MB | 0.0517s | 0.0095s | 0.0314s | **5.4x** | **3.3x** |
| sort | -u unique 10MB | 0.0545s | 0.0114s | 0.0373s | **4.8x** | **3.3x** |
| sort | -t, -k2 CSV 10MB | 0.0697s | 0.0152s | 0.0707s | **4.6x** | **4.7x** |
| sort | repetitive 10MB | 0.0455s | 0.0104s | 0.0370s | **4.4x** | **3.5x** |
| sort | --parallel=4 10MB | 0.0512s | 0.0100s | 0.0311s | **5.1x** | **3.1x** |
| tac | reverse 100KB text | 0.0009s | 0.0010s | 0.0011s | **0.8x** | **1.1x** |
| tac | reverse 1MB text | 0.0017s | 0.0015s | 0.0015s | **1.2x** | **1.1x** |
| tac | reverse 10MB text | 0.0090s | 0.0044s | 0.0050s | **2.1x** | **1.1x** |
| tac | reverse 100MB text | 0.0854s | 0.0239s | 0.0447s | **3.6x** | **1.9x** |
| tac | reverse CSV 10MB | 0.0084s | 0.0043s | 0.0045s | **2.0x** | **1.0x** |
| tac | reverse repetitive 10MB | 0.0190s | 0.0094s | 0.0088s | **2.0x** | **0.9x** |
| tac | custom separator 1MB | 0.0044s | 0.0036s | 0.0039s | **1.2x** | **1.1x** |
| tr | a-z to A-Z 1MB | 0.0019s | 0.0016s | 0.0018s | **1.2x** | **1.1x** |
| tr | a-z to A-Z 10MB | 0.0095s | 0.0044s | 0.0067s | **2.1x** | **1.5x** |
| tr | -d digits 10MB | 0.0111s | 0.0052s | 0.0101s | **2.1x** | **2.0x** |
| tr | -d lowercase 10MB | 0.0185s | 0.0068s | 0.0173s | **2.7x** | **2.5x** |
| tr | -s spaces 10MB | 0.0166s | 0.0044s | 0.0115s | **3.8x** | **2.6x** |
| tr | [:lower:] to [:upper:] 10MB | 0.0089s | 0.0043s | 0.0067s | **2.1x** | **1.5x** |
| tr | -d [:digit:] 10MB CSV | 0.0110s | 0.0052s | 0.0100s | **2.1x** | **1.9x** |
| tr | translate binary 10MB | 0.0092s | 0.0051s | 0.0076s | **1.8x** | **1.5x** |
| uniq | default 10MB many duplicates | 0.0095s | 0.0019s | 0.0090s | **5.0x** | **4.8x** |
| uniq | default 10MB sorted (low dup) | 0.0170s | 0.0027s | 0.0101s | **6.2x** | **3.7x** |
| uniq | -c count 10MB many dups | 0.0095s | 0.0017s | 0.0090s | **5.5x** | **5.2x** |
| uniq | -c count 10MB sorted | 0.0297s | 0.0070s | 0.0119s | **4.2x** | **1.7x** |
| uniq | -d duplicates only 10MB | 0.0093s | 0.0017s | 0.0089s | **5.4x** | **5.2x** |
| uniq | -u unique only 10MB | 0.0093s | 0.0017s | 0.0090s | **5.5x** | **5.3x** |
| uniq | -i case insensitive 10MB | 0.0168s | 0.0041s | 0.0100s | **4.1x** | **2.4x** |
| uniq | repetitive 10MB | 0.0484s | 0.0029s | 0.0157s | **16.5x** | **5.3x** |
| wc | default 100KB text | 0.0011s | 0.0011s | 0.0013s | **1.0x** | **1.2x** |
| wc | default 1MB text | 0.0039s | 0.0027s | 0.0033s | **1.4x** | **1.2x** |
| wc | default 10MB text | 0.0344s | 0.0064s | 0.0259s | **5.4x** | **4.0x** |
| wc | default 100MB text | 0.3000s | 0.0451s | 0.2272s | **6.7x** | **5.0x** |
| wc | -l 10MB text | 0.0046s | 0.0024s | 0.0031s | **1.9x** | **1.3x** |
| wc | -w 10MB text | 0.0344s | 0.0065s | 0.0234s | **5.3x** | **3.6x** |
| wc | -c 10MB text | 0.0009s | 0.0009s | 0.0010s | **1.0x** | **1.1x** |
| wc | -m 10MB text | 0.0344s | 0.0024s | 0.0028s | **14.4x** | **1.2x** |
| wc | -L 10MB text | 0.0345s | 0.0065s | 0.0179s | **5.3x** | **2.8x** |
| wc | default 10MB binary | 0.2350s | 0.0172s | 0.1182s | **13.6x** | **6.9x** |
| wc | default 10MB repetitive | 0.0534s | 0.0081s | 0.0378s | **6.6x** | **4.6x** |
| wc | 10 files | 0.0008s | 0.0010s | 0.0011s | **0.7x** | **1.1x** |
| wc | 100 files | 0.0013s | 0.0015s | 0.0016s | **0.9x** | **1.1x** |

### Linux_x86_64

| Tool | Test | GNU (mean) | fcoreutils (mean) | uutils (mean) | f* vs GNU | f* vs uutils |
|------|------|-----------|-------------------|---------------|----------:|-------------:|
| b2sum | single 100KB text | 0.0011s | 0.0011s | 0.0014s | **1.0x** | **1.3x** |
| b2sum | single 1MB text | 0.0023s | 0.0020s | 0.0023s | **1.1x** | **1.1x** |
| b2sum | single 10MB text | 0.0151s | 0.0126s | 0.0122s | **1.2x** | **1.0x** |
| b2sum | single 10MB binary | 0.0159s | 0.0129s | 0.0128s | **1.2x** | **1.0x** |
| b2sum | single 100MB text | 0.1458s | 0.1127s | 0.1138s | **1.3x** | **1.0x** |
| b2sum | -l 256 10MB | 0.0151s | 0.0125s | 0.0121s | **1.2x** | **1.0x** |
| b2sum | -l 128 10MB | 0.0152s | 0.0125s | 0.0121s | **1.2x** | **1.0x** |
| b2sum | 100 files | 0.0022s | 0.0021s | 0.0023s | **1.1x** | **1.1x** |
| base64 | encode 100KB text | 0.0010s | 0.0011s | 0.0012s | **0.9x** | **1.0x** |
| base64 | encode 1MB text | 0.0021s | 0.0018s | 0.0018s | **1.2x** | **1.0x** |
| base64 | encode 10MB text | 0.0123s | 0.0044s | 0.0081s | **2.8x** | **1.8x** |
| base64 | encode 10MB binary | 0.0129s | 0.0045s | 0.0085s | **2.9x** | **1.9x** |
| base64 | decode 1MB | 0.0040s | 0.0022s | 0.0044s | **1.8x** | **2.0x** |
| base64 | decode 10MB | 0.0327s | 0.0050s | 0.0335s | **6.6x** | **6.8x** |
| base64 | encode -w 76 10MB | 0.0122s | 0.0043s | 0.0082s | **2.8x** | **1.9x** |
| base64 | encode -w 0 (no wrap) 10MB | 0.0086s | 0.0043s | 0.0074s | **2.0x** | **1.7x** |
| cut | -b1-100 10MB CSV | 0.0225s | 0.0036s | 0.0072s | **6.2x** | **2.0x** |
| cut | -c1-100 10MB CSV | 0.0225s | 0.0036s | 0.0072s | **6.3x** | **2.0x** |
| cut | -d, -f1 10MB CSV | 0.0163s | 0.0051s | 0.0084s | **3.2x** | **1.6x** |
| cut | -d, -f1,3,5 10MB CSV | 0.0217s | 0.0071s | 0.0179s | **3.1x** | **2.5x** |
| cut | -d, -f2-4 10MB CSV | 0.0241s | 0.0053s | 0.0136s | **4.5x** | **2.6x** |
| cut | --complement -d, -f1 10MB CSV | 0.0306s | 0.0053s | 0.0163s | **5.8x** | **3.1x** |
| cut | -d, -f1 100KB text | 0.0009s | 0.0012s | 0.0011s | **0.7x** | **1.0x** |
| cut | -d, -f1 1MB text | 0.0033s | 0.0029s | 0.0020s | **1.2x** | **0.7x** |
| cut | -d: -f1 colon file | 0.0009s | 0.0012s | 0.0012s | **0.7x** | **0.9x** |
| md5sum | single 100KB text | 0.0015s | 0.0023s | 0.0015s | **0.6x** | **0.6x** |
| md5sum | single 1MB text | 0.0029s | 0.0036s | 0.0033s | **0.8x** | **0.9x** |
| md5sum | single 10MB text | 0.0171s | 0.0179s | 0.0213s | **1.0x** | **1.2x** |
| md5sum | single 10MB binary | 0.0180s | 0.0184s | 0.0222s | **1.0x** | **1.2x** |
| md5sum | single 100MB text | 0.1617s | 0.1534s | 0.2036s | **1.1x** | **1.3x** |
| md5sum | 10 files | 0.0014s | 0.0022s | 0.0014s | **0.6x** | **0.6x** |
| md5sum | 100 files | 0.0023s | 0.0032s | 0.0024s | **0.7x** | **0.7x** |
| sha256sum | single 100KB text | 0.0013s | 0.0027s | 0.0013s | **0.5x** | **0.5x** |
| sha256sum | single 1MB text | 0.0020s | 0.0033s | 0.0020s | **0.6x** | **0.6x** |
| sha256sum | single 10MB text | 0.0084s | 0.0098s | 0.0083s | **0.9x** | **0.8x** |
| sha256sum | single 10MB binary | 0.0088s | 0.0104s | 0.0088s | **0.8x** | **0.9x** |
| sha256sum | single 100MB text | 0.0755s | 0.0747s | 0.0752s | **1.0x** | **1.0x** |
| sha256sum | 10 files | 0.0014s | 0.0021s | 0.0014s | **0.7x** | **0.6x** |
| sha256sum | 100 files | 0.0024s | 0.0026s | 0.0023s | **0.9x** | **0.9x** |
| sort | lexicographic 1MB | 0.0085s | 0.0035s | 0.0056s | **2.4x** | **1.6x** |
| sort | lexicographic 10MB random | 0.0543s | 0.0099s | 0.0367s | **5.5x** | **3.7x** |
| sort | already sorted 10MB | 0.0263s | 0.0049s | 0.0178s | **5.4x** | **3.6x** |
| sort | reverse sorted 10MB | 0.0275s | 0.0064s | 0.0184s | **4.3x** | **2.9x** |
| sort | -n numeric 10MB | 0.0739s | 0.0052s | 0.0756s | **14.2x** | **14.5x** |
| sort | -r reverse 10MB | 0.0546s | 0.0091s | 0.0362s | **6.0x** | **4.0x** |
| sort | -u unique 10MB | 0.0581s | 0.0094s | 0.0404s | **6.2x** | **4.3x** |
| sort | -t, -k2 CSV 10MB | 0.0668s | 0.0199s | 0.0839s | **3.4x** | **4.2x** |
| sort | repetitive 10MB | 0.0572s | 0.0129s | 0.0381s | **4.4x** | **3.0x** |
| sort | --parallel=4 10MB | 0.0547s | 0.0095s | 0.0360s | **5.7x** | **3.8x** |
| tac | reverse 100KB text | 0.0010s | 0.0012s | 0.0013s | **0.9x** | **1.1x** |
| tac | reverse 1MB text | 0.0020s | 0.0015s | 0.0018s | **1.3x** | **1.1x** |
| tac | reverse 10MB text | 0.0105s | 0.0046s | 0.0058s | **2.3x** | **1.3x** |
| tac | reverse 100MB text | 0.1046s | 0.0269s | 0.0518s | **3.9x** | **1.9x** |
| tac | reverse CSV 10MB | 0.0093s | 0.0049s | 0.0056s | **1.9x** | **1.1x** |
| tac | reverse repetitive 10MB | 0.0232s | 0.0100s | 0.0109s | **2.3x** | **1.1x** |
| tac | custom separator 1MB | 0.0059s | 0.0043s | 0.0053s | **1.4x** | **1.2x** |
| tr | a-z to A-Z 1MB | 0.0023s | 0.0015s | 0.0020s | **1.5x** | **1.3x** |
| tr | a-z to A-Z 10MB | 0.0130s | 0.0037s | 0.0074s | **3.5x** | **2.0x** |
| tr | -d digits 10MB | 0.0160s | 0.0042s | 0.0151s | **3.8x** | **3.5x** |
| tr | -d lowercase 10MB | 0.0304s | 0.0050s | 0.0209s | **6.1x** | **4.2x** |
| tr | -s spaces 10MB | 0.0268s | 0.0039s | 0.0278s | **6.9x** | **7.2x** |
| tr | [:lower:] to [:upper:] 10MB | 0.0131s | 0.0038s | 0.0075s | **3.5x** | **2.0x** |
| tr | -d [:digit:] 10MB CSV | 0.0159s | 0.0043s | 0.0136s | **3.7x** | **3.2x** |
| tr | translate binary 10MB | 0.0120s | 0.0040s | 0.0082s | **3.0x** | **2.0x** |
| uniq | default 10MB many duplicates | 0.0118s | 0.0019s | 0.0122s | **6.2x** | **6.4x** |
| uniq | default 10MB sorted (low dup) | 0.0139s | 0.0030s | 0.0135s | **4.6x** | **4.5x** |
| uniq | -c count 10MB many dups | 0.0120s | 0.0019s | 0.0122s | **6.2x** | **6.3x** |
| uniq | -c count 10MB sorted | 0.0292s | 0.0078s | 0.0157s | **3.8x** | **2.0x** |
| uniq | -d duplicates only 10MB | 0.0120s | 0.0019s | 0.0121s | **6.3x** | **6.3x** |
| uniq | -u unique only 10MB | 0.0120s | 0.0019s | 0.0124s | **6.2x** | **6.4x** |
| uniq | -i case insensitive 10MB | 0.0139s | 0.0044s | 0.0131s | **3.1x** | **3.0x** |
| uniq | repetitive 10MB | 0.0418s | 0.0038s | 0.0177s | **11.1x** | **4.7x** |
| wc | default 100KB text | 0.0014s | 0.0012s | 0.0015s | **1.1x** | **1.3x** |
| wc | default 1MB text | 0.0057s | 0.0028s | 0.0039s | **2.0x** | **1.4x** |
| wc | default 10MB text | 0.0543s | 0.0031s | 0.0310s | **17.5x** | **10.0x** |
| wc | default 100MB text | 0.4830s | 0.0141s | 0.2659s | **34.3x** | **18.9x** |
| wc | -l 10MB text | 0.0020s | 0.0025s | 0.0019s | **0.8x** | **0.8x** |
| wc | -w 10MB text | 0.0542s | 0.0086s | 0.0259s | **6.3x** | **3.0x** |
| wc | -c 10MB text | 0.0009s | 0.0010s | 0.0013s | **0.9x** | **1.2x** |
| wc | -m 10MB text | 0.0543s | 0.0030s | 0.0019s | **17.9x** | **0.6x** |
| wc | -L 10MB text | 0.0542s | 0.0113s | 0.0163s | **4.8x** | **1.4x** |
| wc | default 10MB binary | 0.3183s | 0.0269s | 0.1564s | **11.8x** | **5.8x** |
| wc | default 10MB repetitive | 0.0730s | 0.0045s | 0.0420s | **16.1x** | **9.3x** |
| wc | 10 files | 0.0010s | 0.0011s | 0.0014s | **0.9x** | **1.2x** |
| wc | 100 files | 0.0019s | 0.0018s | 0.0023s | **1.0x** | **1.3x** |
